--- a/wedding-app/src/App.css
+++ b/wedding-app/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+
 }
 
 .App-logo {
@@ -12,6 +14,13 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.TextArea{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .App-header {
   background-color: #282c34;
@@ -22,6 +31,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: 50%;
 }
 
 .App-link {
