--- a/wedding-app/src/App.css
+++ b/wedding-app/src/App.css
@@ -23,7 +23,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: url(images/beautiful-rustic-wedding-reception-ideas-with-lights.jpg);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
