--- a/wedding-app/src/components/TextArea.module.css
+++ b/wedding-app/src/components/TextArea.module.css
@@ -4,5 +4,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
+  }
+
+  .HeaderTextArea{
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
   }
