fittin background of textarea to the picture on the roght

--- a/wedding-app/src/components/TextArea.module.css
+++ b/wedding-app/src/components/TextArea.module.css
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
+    background: rgb(240,202,164);
+    background: linear-gradient( rgb(241, 192, 142) 0%, rgb(236, 147, 58) 100%);
   }
 
   .HeaderTextArea{
