modifying background size

--- a/wedding-app/src/components/ImagesArea.module.css
+++ b/wedding-app/src/components/ImagesArea.module.css
@@ -1,6 +1,7 @@
 .ImagesArea {
     order: 1;
-    background: url(../images/beautiful-rustic-wedding-reception-ideas-with-lights.jpg);
+    background: url(../images/beautiful-rustic-wedding-reception-ideas-with-lights.jpg) no-repeat;
+    background-size: 100vh 60vw;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
