--- a/wedding-app/src/components/TextArea.module.css
+++ b/wedding-app/src/components/TextArea.module.css
@@ -1,38 +1,34 @@
-.TextArea{
+.TextArea {
   order: 0;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: rgb(240,202,164);
-    background: linear-gradient( rgb(247, 207, 167) 0%, rgb(245, 180, 116) 100%);
-  }
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #ff9966;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #ff5e62, #ff9966);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #ff5e62, #ff9966);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
-  .HeaderTextArea{
-    display: flex;
-    width: 80%;
-    justify-content: space-between;
-    font-size: 56px;
-    font-family: myFirstFont;
-  }
+.MiddleTextArea {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
-  .HeaderTextArea p{
-  cursor: pointer;
-  }
+.MiddleTextArea a {
+  text-decoration: none;
+  color: inherit;
+}
 
-  .MiddleTextArea{
-    display: flex;
-    flex-direction: column;
-  }
-  .MiddleTextArea a{
-    text-decoration: none;
-    color: inherit;
-  }
-  .MiddleTextArea a:hover{
-    font-weight: bold;
-  }
+.MiddleTextArea a:hover {
+  font-weight: bold;
+}
 
-  @font-face {
-    font-family: myFirstFont;
-    src: url(../isabela-zvpvx.otf);
-  }
+@font-face {
+  font-family: myFirstFont;
+  src: url(../isabela-zvpvx.otf);
+}
