--- a/wedding-app/src/components/ImagesArea.module.css
+++ b/wedding-app/src/components/ImagesArea.module.css
@@ -1,6 +1,6 @@
 .ImagesArea {
     order: 1;
-    background: url(../images/beautiful-rustic-wedding-reception-ideas-with-lights.jpg) no-repeat;
+    background: url(../images/party.png) no-repeat;
     background-size: cover;
     min-height: 100vh;
     width: 50%;
